Deploying Running 9